# gwas-analysis

./: .gitignore  README.md
add-twas/: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml  real_config.yaml
add-twas/.snakemake/metadata/: ZXhhbXBsZV9vdXRwdXRzL2NvbWJpbmVkX3Jlc3VsdHMvdGh5cm9pZF9jYW5jZXIudHN2
add-twas/modules/: main.py  match_fusion.py  match_predixscan.py  prep_predixscan.py
combine-leads/: .gitignore  README.md  Snakefile  combine_leads.py  config.yaml  environment.yml  pyproject.toml
combine-leads/.snakemake/metadata/: ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90Y192c19ibmdfYm90aF9hbGxfYW5jZXN0cmllcy50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90Y192c19ibmdfYm90aF9jb3VudC50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90Y192c19ibmdfYm90aF9tb3N0X3NpZ25pZmljYW50LnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90aHlyb2lkX2NhbmNlcl9ib3RoX21vc3Rfc2lnbmlmaWNhbnQudHN2  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90aHlyb2lkX2NhbmNlcl9ib3RoX2FsbF9hbmNlc3RyaWVzLnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy90aHlyb2lkX2NhbmNlcl9ib3RoX2NvdW50LnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9iZW5pZ25fbm9kdWxhcl9nb2l0ZXJfYm90aF9hbGxfYW5jZXN0cmllcy50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9iZW5pZ25fbm9kdWxhcl9nb2l0ZXJfYm90aF9jb3VudC50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9iZW5pZ25fbm9kdWxhcl9nb2l0ZXJfYm90aF9tb3N0X3NpZ25pZmljYW50LnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9ncmF2ZXNfYm90aF9hbGxfYW5jZXN0cmllcy50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9ncmF2ZXNfYm90aF9jb3VudC50c3Y=  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9ncmF2ZXNfYm90aF9tb3N0X3NpZ25pZmljYW50LnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9oeXBvdGh5cm9pZGlzbV9ib3RoX21vc3Rfc2lnbmlmaWNhbnQudHN2  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9oeXBvdGh5cm9pZGlzbV9ib3RoX2FsbF9hbmNlc3RyaWVzLnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9oeXBvdGh5cm9pZGlzbV9ib3RoX2NvdW50LnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9seW1waG9jeXRpY190aHlyb2lkaXRpc19ib3RoX21vc3Rfc2lnbmlmaWNhbnQudHN2  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9seW1waG9jeXRpY190aHlyb2lkaXRpc19ib3RoX2FsbF9hbmNlc3RyaWVzLnRzdg==  ZXhhbXBsZV9vdXRwdXRzL2ZpbmFsX3RhYmxlcy9seW1waG9jeXRpY190aHlyb2lkaXRpc19ib3RoX2NvdW50LnRzdg==
combine-leads/example_inputs/: make_map.py  map.tsv
five-fold-prs-validation/: .gitignore  README.md  Snakefile  config.yaml  environment.yml  five_fold.py  pyproject.toml  r_environment.yml  run_delong.R
five-fold-prs-validation/.snakemake/metadata/: ZXhhbXBsZV9vdXRwdXQvZGVsb25nL21peGVkX21hbnVhbF9kZWxvbmdfaW5wdXQudHN2  ZXhhbXBsZV9vdXRwdXQvZGVsb25nL21peGVkX2FsbF9wX3ZhbHMudHN2  ZXhhbXBsZV9vdXRwdXQvZGVsb25nL21peGVkX3Byc2NzX2RlbG9uZ19pbnB1dC50c3Y=  ZXhhbXBsZV9vdXRwdXQvZml2ZV9mb2xkX3Jhdy9taXhlZF9tYW51YWxfZml2ZV9mb2xkX3Jhdy50c3Y=  ZXhhbXBsZV9vdXRwdXQvZml2ZV9mb2xkX3Jhdy9taXhlZF9wcnNjc19maXZlX2ZvbGRfcmF3LnRzdg==  ZXhhbXBsZV9vdXRwdXQvbWFudWFsX2RlbG9uZ19pbnB1dC50c3Y=  ZXhhbXBsZV9vdXRwdXQvbWFudWFsX2ZpdmVfZm9sZF9tYXRyaXgudHN2  ZXhhbXBsZV9vdXRwdXQvbWFudWFsX2ZpdmVfZm9sZF9yYXcudHN2  ZXhhbXBsZV9vdXRwdXQvbWl4ZWRfbWFudWFsX2RlbG9uZ19pbnB1dC50c3Y=  ZXhhbXBsZV9vdXRwdXQvbWl4ZWRfbWFudWFsX2ZpdmVfZm9sZF9yYXcudHN2  ZXhhbXBsZV9vdXRwdXQvbWl4ZWRfcHJzY3NfZGVsb25nX2lucHV0LnRzdg==  ZXhhbXBsZV9vdXRwdXQvbWl4ZWRfcHJzY3NfZml2ZV9mb2xkX3Jhdy50c3Y=  ZXhhbXBsZV9vdXRwdXQvcHJzY3NfZGVsb25nX2lucHV0LnRzdg==  ZXhhbXBsZV9vdXRwdXQvcHJzY3NfZml2ZV9mb2xkX21hdHJpeC50c3Y=  ZXhhbXBsZV9vdXRwdXQvcHJzY3NfZml2ZV9mb2xkX3Jhdy50c3Y=  cmVhbF9vdXRwdXQvZGVsb25nL21peGVkX21hbnVhbF9kZWxvbmdfaW5wdXQudHN2  cmVhbF9vdXRwdXQvZGVsb25nL21peGVkX2FsbF9wX3ZhbHMudHN2  cmVhbF9vdXRwdXQvZGVsb25nL21peGVkX3Byc2NzX2RlbG9uZ19pbnB1dC50c3Y=  cmVhbF9vdXRwdXQvZml2ZV9mb2xkX3Jhdy9taXhlZF9tYW51YWxfZml2ZV9mb2xkX3Jhdy50c3Y=  cmVhbF9vdXRwdXQvZml2ZV9mb2xkX3Jhdy9taXhlZF9wcnNjc19maXZlX2ZvbGRfcmF3LnRzdg==
five-fold-prs-validation/example_inputs/: covar.tsv
five-fold-prs-validation/example_inputs/manual/: benign_nodular_goiter.tsv  hypothyroidism.tsv  tc_vs_bng.tsv  thyroid_cancer_GBMI_I.tsv  thyroid_cancer_GBMI_II.tsv
five-fold-prs-validation/example_inputs/pheno/: benign_nodular_goiter.tsv  hypothyroidism.tsv  tc_vs_bng.tsv  thyroid_cancer.tsv
five-fold-prs-validation/modules/: five_fold.py  format_five_fold.py
gnomad-query/: .gitignore  README.md  Snakefile  bcftools_query.sh  config.yaml  environment.yml  flag.py  help.sh  pyproject.toml  submit.sh  test.yaml
gwasqc/: .gitignore  .pylintrc  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml
gwasqc/example_inputs/: map.txt
gwasqc/modules/: align_non_palindromic_variants.py  align_palindromic_variants.py  combine.py  filter_gwas.py  get_gnomad_ref.py  harmonize.py  mahalanobis.py  manhattan.py  scatter.py
risk-regression/: .gitignore  README.md  environment.yml  format.py  pyproject.toml  run_regression.R
run-fusion/: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml
run-fusion/modules/: merge_fusion_and_add_name.py
run-prscs/: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml
run-prscs/example_inputs/: map.tsv
run-prscs/modules/: lift.py  make_input_files.py
run-summix/: .gitignore  README.md  Snakefile  config.yaml  environment.yml  pyproject.toml  r_environment.yml  run_summix.R  run_summix_on_metal.R  run_summix_on_metal.sh  summix.R
run-summix/example_inputs/: meta_data.tsv
run-summix/modules/: prep_for_summix.py
(+128 files in other folders)
