[tool.poetry]
name = "gnomad-query"
version = "0.1.0"
description = ""
authors = ["sam-white04 <white.samantha@outlook.com>"]
readme = "README.md"
packages = [{include = "gnomad_query"}]

[tool.poetry.dependencies]
python = "^3.11"
snakemake = "^9.1.3"
polars = "^1.26.0"
defopt = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
