[tool.poetry]
name = "gwas-qc"
version = "0.1.0"
description = ""
authors = ["sam-white04 <white.samantha@outlook.com>"]
readme = "README.md"
packages = [{include = "gwas_qc"}]

[tool.poetry.dependencies]
python = "^3.11"
snakemake = "^9.1.3"
black = "^25.1.0"
isort = "^6.0.1"
pandas = "^2.2.3"
pylint = "^3.3.6"
scipy = "^1.15.2"
flake8 = "^7.2.0"
autopep8 = "^2.3.2"
crossmap = "^0.7.3"
matplotlib = "^3.10.1"
polars = "^1.26.0"
qqman = "^1.0.7"
pyarrow = "^19.0.1"
numpy = "^2.2.4"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
