[tool.poetry]
name = "prscs-python"
version = "0.1.0"
description = ""
authors = ["sam-white04 <white.samantha@outlook.com>"]
readme = "README.md"
packages = [{include = "prscs_python"}]

[tool.poetry.dependencies]
python = "^3.11"
snakemake = "^9.1.9"
polars = "^1.26.0"
numpy = "^2.2.4"
defopt = "^6.4.0"
pandas = "^2.2.3"
black = "^25.1.0"
pylint = "^3.3.6"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
