[tool.poetry]
name = "run-summix"
version = "0.1.0"
description = ""
authors = ["sam-white04 <white.samantha@outlook.com>"]
readme = "README.md"
packages = [{include = "run_summix"}]

[tool.poetry.dependencies]
python = "^3.11"
snakemake = "^9.1.3"
defopt = "^6.4.0"
polars = "^1.26.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
